--- a/shared-files/golang/.golangci.yml.njk
+++ b/shared-files/golang/.golangci.yml.njk
@@ -1,3 +1,5 @@
+{% include '../common/header.tmpl' %}
+
 # Visit https://golangci-lint.run/ for usage documentation
 # and information on other useful linters
 issues:
