--- a/shared-files/pre-commit/.pre-commit-config.yaml.njk
+++ b/shared-files/pre-commit/.pre-commit-config.yaml.njk
@@ -1,4 +1,4 @@
-{% include '../common/header.tmpl' %}
+{% include '../common/header.yml.tmpl' %}
 
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
