--- a/shared-files/github-actions/pr_open.yml.njk
+++ b/shared-files/github-actions/pr_open.yml.njk
@@ -1,4 +1,4 @@
-{% include '../common/header.tmpl' %}
+{% include '../common/header.yml.tmpl' %}
 
 name: PR Open
 
@@ -26,5 +26,9 @@ jobs:
     {% include './common/golang/lint.tmpl' %}
 
   tests:
+    {% if terraform_provider %}
+    {% include './common/golang/unit-test-tf-provider.tmpl' %}
+    {% else %}
     {% include './common/golang/unit-test.tmpl' %}
+    {% endif %}
 {% endif %}
