--- a/shared-files/golang/.golangci.yml.njk
+++ b/shared-files/golang/.golangci.yml.njk
@@ -1,4 +1,4 @@
-{% include '../common/header.tmpl' %}
+{% include '../common/header.yml.tmpl' %}
 
 # Visit https://golangci-lint.run/ for usage documentation
 # and information on other useful linters
