feat: add cloudavenue-sdk-go

--- a/shared-files/github-actions/common/golang/unit-test-tf-provider.tmpl
+++ b/shared-files/github-actions/common/golang/unit-test-tf-provider.tmpl
@@ -4,3 +4,4 @@
       CLOUDAVENUE_ORG: {% raw %}${{ secrets.CLOUDAVENUE_ORG }}{% endraw %}
       CLOUDAVENUE_USER: {% raw %}${{ secrets.CLOUDAVENUE_USER }}{% endraw %}
       CLOUDAVENUE_PASSWORD: {% raw %}${{ secrets.CLOUDAVENUE_PASSWORD }}{% endraw %}
+      CLOUDAVENUE_VDC: {% raw %}${{ secrets.CLOUDAVENUE_VDC }}{% endraw %}
