--- a/shared-files/golang/.golangci.yml.njk
+++ b/shared-files/golang/.golangci.yml.njk
@@ -45,7 +45,9 @@ linters:
     - rowserrcheck # checks whether Err of rows is checked successfully [fast: false, auto-fix: false]
     - sqlclosecheck # Checks that sql.Rows and sql.Stmt are closed. [fast: false, auto-fix: false]
     - stylecheck # Stylecheck is a replacement for golint [fast: false, auto-fix: false]
+    {% if repo.name != 'cloudavenue-sdk-go' %}
     - tagliatelle # Checks the struct tags. [fast: true, auto-fix: false]
+    {% endif %}
     - tenv # tenv is analyzer that detects using os.Setenv instead of t.Setenv since Go1.17 [fast: false, auto-fix: false]
     - tparallel # tparallel detects inappropriate usage of t.Parallel() method in your Go test codes [fast: false, auto-fix: false]
     - typecheck # Like the front-end of a Go compiler, parses and type-checks Go code [fast: false, auto-fix: false]
@@ -116,6 +118,12 @@ linters-settings:
     # Choose whether to use the extra rules.
     # Default: false
     extra-rules: true
+
+{% if repo.name == 'cloudavenue-sdk-go' %}
+  gosec:
+    excludes:
+      - G115
+{% endif %}
 
   revive:
     ignore-generated-header: true
