--- a/shared-files/github-actions/pr_open.yml.njk
+++ b/shared-files/github-actions/pr_open.yml.njk
@@ -22,6 +22,13 @@ jobs:
       {#- raw is used to avoid conflicts with the templating engine and github action #}
       TOKEN: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
 
+  changelog-validation:
+    name: "Changelog Validation"
+    uses: orange-cloudavenue/workflows/.github/workflows/changelog_validation.yml@main
+    secrets:
+      {#- raw is used to avoid conflicts with the templating engine and github action #}
+      TOKEN: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %}
+
 {% if golang %}
   golang-ci-lint:
     {% include './common/golang/lint.tmpl' %}
