--- a/shared-files/github-actions/push_main.yml.njk
+++ b/shared-files/github-actions/push_main.yml.njk
@@ -16,6 +16,8 @@ permissions:
   contents: write
 
 jobs:
-  request-doc-update:
-    name: "Request doc update"
-    uses: orange-cloudavenue/workflows/.github/workflows/doc_publish.yml@main
+{% if golang %}
+  go-report-card:
+    name: "Go report card"
+    uses: orange-cloudavenue/workflows/.github/workflows/go_report_card.yml@main
+{% endif %}
