--- a/shared-files/github-actions/pr.yml.njk
+++ b/shared-files/github-actions/pr.yml.njk
@@ -43,9 +43,9 @@ jobs:
       {#- raw is used to avoid conflicts with the templating engine and github action #}
       TOKEN: {% raw %}${{ secrets.CHANGELOG_PAT }}{% endraw %}
 
-  pr-license:
+  {# pr-license:
     name: "License Check"
-    uses: orange-cloudavenue/workflows/.github/workflows/pr_license.yml@main
+    uses: orange-cloudavenue/workflows/.github/workflows/pr_license.yml@main #}
 
 {% if golang %}
   golang-ci-lint:
