--- a/shared-files/github-actions/pr_close.yml.njk
+++ b/shared-files/github-actions/pr_close.yml.njk
@@ -8,7 +8,7 @@ on:
 
 concurrency:
   {#- raw is used to avoid conflicts with the templating engine and github action #}
-  group: {% raw %}${{ github.ref }}-${{ github.head_ref }}-changelog{% endraw %}
+  group: {% raw %}${{ github.ref }}-${{ github.head_ref }}-pr-close{% endraw %}
   cancel-in-progress: true
 
 permissions:
