feat: add license cloudavenue sdk

--- a/shared-files/license/licenserc.yaml.njk
+++ b/shared-files/license/licenserc.yaml.njk
@@ -46,6 +46,7 @@ header: # `header` section is configurations for source codes license header.
     - '**/go.mod'
     - '**/go.sum'
     - 'LICENSE'
+    - 'LICENCE'
     - 'NOTICE'
     - '**/**.svg'
     - "**/zz_generated.*.go"
