--- a/shared-files/pre-commit/.pre-commit-config.yaml.njk
+++ b/shared-files/pre-commit/.pre-commit-config.yaml.njk
@@ -38,3 +38,15 @@ repos:
   rev: v8.19.2
   hooks:
     - id: gitleaks
+
+{% if terraform %}
+## TERRAFORM
+- repo: https://github.com/antonbabenko/pre-commit-terraform
+  rev: v1.96.3
+  hooks:
+    - id: terraform_fmt
+    - id: terraform_docs
+    - id: terraform_tflint
+    # - id: terraform_tfsec
+    - id: terraform_validate
+{% endif %}
