fix: licencerc for `zz_generated*/go` files

--- a/shared-files/license/licenserc.yaml.njk
+++ b/shared-files/license/licenserc.yaml.njk
@@ -49,7 +49,7 @@ header: # `header` section is configurations for source codes license header.
     - 'LICENCE'
     - 'NOTICE'
     - '**/**.svg'
-    - "**/zz_generated.*.go"
+    - "**/zz_generated*.go"
     - "GNUmakefile"
     - "Makefile"
     - "**/*.json"
