chore: add missing headers

--- a/shared-files/github-actions/labeler.yml.njk
+++ b/shared-files/github-actions/labeler.yml.njk
@@ -1,3 +1,5 @@
+{% include '../common/header.yml.tmpl' %}
+
 name: Labeler
 
 # Labeler manage labels on your GitHub repository based on a YAML file.
