--- a/shared-files/pr-size/pull-request-size.yml.njk
+++ b/shared-files/pr-size/pull-request-size.yml.njk
@@ -1,3 +1,5 @@
+{% include '../common/header.yml.tmpl' %}
+
 # Configuration for PR Size Labeler
 
 # List of files to exclude from size calculation
