--- a/shared-files/license/licenserc.yaml.njk
+++ b/shared-files/license/licenserc.yaml.njk
@@ -1,3 +1,5 @@
+{% include '../common/header.yml.tmpl' %}
+
 header: # `header` section is configurations for source codes license header.
   license:
     copyright-owner: Orange # the copyright owner to replace the [owner] in the `spdx-id` template.
@@ -70,6 +72,8 @@ header: # `header` section is configurations for source codes license header.
     - ".devcontainer/"
     - ".goreleaser.yml"
     - "examples/"
+    - ".taskfiles/"
+    - "Taskfile.yml"
 
   comment: on-failure # on what condition license-eye will comment on the pull request, `on-failure`, `always`, `never`.
 
