chore: add module vdc

--- a/shared-files/taskfile/libraries/golang.yml.njk
+++ b/shared-files/taskfile/libraries/golang.yml.njk
@@ -1,6 +1,7 @@
-{% include '../common/header.yml.tmpl' %}
+{% include '../../common/header.yml.tmpl' %}
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-
+{#- raw is used to avoid conflicts with the templating engine and go-task #}
+{% raw %}
 version: "3"
 
 includes: 
@@ -89,3 +90,4 @@ tasks:
     desc: Generate code
     cmds:
       - go generate ./...
+{% endraw %}
