--- a/shared-files/taskfile/libraries/pre-commit.yml.njk
+++ b/shared-files/taskfile/libraries/pre-commit.yml.njk
@@ -1,6 +1,7 @@
-{% include '../common/header.yml.tmpl' %}
+{% include '../../common/header.yml.tmpl' %}
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-
+{#- raw is used to avoid conflicts with the templating engine and go-task #}
+{% raw %}
 version: "3"
 
 includes: 
@@ -35,3 +36,4 @@ tasks:
         task: internal:tools:brew
         vars:
           APP: '{{.ITEM}}'
+{% endraw %}
