--- a/shared-files/taskfile/libraries/terraform.yml.njk
+++ b/shared-files/taskfile/libraries/terraform.yml.njk
@@ -1,7 +1,14 @@
-{% include '../common/header.yml.tmpl' %}
+{% include '../../common/header.yml.tmpl' %}
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-
+{#- raw is used to avoid conflicts with the templating engine and go-task #}
+{% raw %}
 version: "3"
+
+vars:
+  IS_MODULE:
+    # The pattern of terraform module name is terraform-cloudavenue-<nameofmodule>.
+    # Detect if it's a module with the presence of the terraform-cloudavenue- keyword in the last part of the path
+    sh: awk -F/ '{print $NF}' <<< $(pwd) | grep -q "terraform-cloudavenue-" && echo "true" || echo "false"
 
 includes: 
   internal: internal.yml
@@ -26,10 +33,24 @@ tasks:
           APP: '{{.ITEM}}'
       - for: [
           hashicorp/tap/terraform,
+          tflint,
         ]
         task: internal:tools:brew
         vars:
           APP: '{{.ITEM}}'
+      - task: install:module
+  
+  install:module:
+    desc: Install terraform module
+    {# preconditions:
+      - sh: test -f main.tf
+        msg: "No main.tf file found." #}
+    cmds:
+      - if: IS_MODULE == "true"
+        then:
+          - terraform init
+        else:
+          - echo "This is not a terraform module"
   
   # * Lint 
   lint:
@@ -37,9 +58,11 @@ tasks:
     cmds:
       - for: [
           tf:fmt,
+          tflint,
         ]
         task: lint:{{.ITEM}}
 
+  # * Lint with terraform client
   lint:tf:fmt:
     desc: Run terraform fmt
     internal: true
@@ -57,4 +80,16 @@ tasks:
         msg: "terraform is not installed. Please run `task install`"
     cmds:
       - find {{.DIRECTORY}} -name "*.tf" -exec terraform fmt {} \;
-    
+
+  # * Lint with tflint
+  lint:tflint:
+    desc: Run tflint
+    internal: true
+    preconditions:
+      - sh: command -v tflint
+        msg: "tflint is not installed. Please run `task install`"
+      - sh: test -f .tflint.hcl
+        msg: "No .tflint.hcl file found."
+    cmds:
+      - tflint
+{% endraw %}
