--- a/shared-files/github-actions/labeler.yml.njk
+++ b/shared-files/github-actions/labeler.yml.njk
@@ -15,7 +15,7 @@ on:
     paths:
       - '.github/labels.yml'
       - '.github/workflows/labeler.yml'
-
+{% raw %}
 jobs:
   labeler:
     runs-on: ubuntu-latest
@@ -36,3 +36,4 @@ jobs:
           exclude: |
             help*
             *issue
+{% endraw %}
