--- a/shared-files/labeler/labels.yml.njk
+++ b/shared-files/labeler/labels.yml.njk
@@ -1,5 +1,7 @@
 {% include '../common/header.yml.tmpl' %}
 
+# more info https://github.com/crazy-max/ghaction-github-labeler
+
 - name: "enhancement"
   color: "a2eeef"
   description: "Enhancement"
@@ -24,7 +26,7 @@
   description: "Language Golang"
 
 # Conventional commits (set by Action )
-    {# "feat": "feature",
+    {#- "feat": "feature",
     "fix": "fix",
     "docs": "documentation",
     "test": "test",
