--- a/shared-files/taskfile/libraries/internal.yml.njk
+++ b/shared-files/taskfile/libraries/internal.yml.njk
@@ -1,6 +1,7 @@
-{% include '../common/header.yml.tmpl' %}
+{% include '../../common/header.yml.tmpl' %}
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-
+{#- raw is used to avoid conflicts with the templating engine and go-task #}
+{% raw %}
 version: "3"
 
 tasks:
@@ -29,3 +30,4 @@ tasks:
           brew tap {{.APP}} --quiet && \
             echo "✅ {{.APP}} tapped successfully" || \
             echo "❌ Failed to tap {{.APP}} not tapped"
+{% endraw %}
