--- a/shared-files/taskfile/libraries/license.yml.njk
+++ b/shared-files/taskfile/libraries/license.yml.njk
@@ -1,6 +1,7 @@
-{% include '../common/header.yml.tmpl' %}
+{% include '../../common/header.yml.tmpl' %}
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
-
+{#- raw is used to avoid conflicts with the templating engine and go-task #}
+{% raw %}
 version: "3"
 
 includes: 
@@ -65,3 +66,4 @@ tasks:
         msg: "No .licenserc.yaml file found.`"
     cmds:
       - license-eye header fix
+{% endraw %}
