--- a/shared-files/dependabot/dependabot.yml.njk
+++ b/shared-files/dependabot/dependabot.yml.njk
@@ -12,3 +12,9 @@ updates:
     schedule:
       interval: "daily"
 {% endif %}
+{% if terraform %}
+  - package-ecosystem: "terraform"
+    directory: "/"
+    schedule:
+      interval: "daily"
+{% endif %}
