--- a/shared-files/pre-commit/.pre-commit-config.yaml.njk
+++ b/shared-files/pre-commit/.pre-commit-config.yaml.njk
@@ -42,7 +42,7 @@ repos:
   hooks:
     - id: conventional-pre-commit
       stages: [commit-msg]
-      args: []
+      args: [--strict]
 
 ## SECURITY
 - repo: https://github.com/gitleaks/gitleaks
