fix: license CI

--- a/shared-files/golang/.golangci.yml.njk
+++ b/shared-files/golang/.golangci.yml.njk
@@ -182,6 +182,7 @@ linters-settings:
               "XMPP",
               "XSRF",
               "XSS",
+              "SSL",
               # Custom rules
               "VDC",
               "DFW",
