--- a/shared-files/license/licenserc.yaml.njk
+++ b/shared-files/license/licenserc.yaml.njk
@@ -47,6 +47,8 @@ header: # `header` section is configurations for source codes license header.
     - '**/testdata/**'
     - '**/go.mod'
     - '**/go.sum'
+    - '**/go.work'
+    - '**/go.work.sum'
     - 'LICENSE'
     - 'LICENCE'
     - 'NOTICE'
