--- a/shared-files/license/licenserc.yaml.njk
+++ b/shared-files/license/licenserc.yaml.njk
@@ -61,6 +61,7 @@ header: # `header` section is configurations for source codes license header.
     - "**/*.tmpl"
     - "**/*.tf"
     - ".changelog/"
+    - "**/.changelog/"
     - ".archive/"
     - ".github/"
     - ".vscode/"
