--- a/shared-files/labeler/labels.yml.njk
+++ b/shared-files/labeler/labels.yml.njk
@@ -14,6 +14,9 @@
 - name: "bug"
   color: "B60205"
   description: "Bug"
+- name: "terraform-module"
+  color: "7B42BC"
+  description: "Terraform module"
 
 # Sync 
 - name: "sync"
