chore: add label parent

--- a/shared-files/labeler/labels.yml.njk
+++ b/shared-files/labeler/labels.yml.njk
@@ -17,6 +17,9 @@
 - name: "terraform-module"
   color: "7B42BC"
   description: "Terraform module"
+- name: "parent"
+  color: "BFDADC"
+  description: "Parent issue"
 
 # Sync 
 - name: "sync"
