chore: add tests parent

--- a/shared-files/labeler/labels.yml.njk
+++ b/shared-files/labeler/labels.yml.njk
@@ -20,6 +20,9 @@
 - name: "parent"
   color: "BFDADC"
   description: "Parent issue"
+- name: "tests"
+  color: "5be9ff"
+  description: "Tests"
 
 # Sync 
 - name: "sync"
