fix: ci project

--- a/shared-files/github-actions/project.yml.njk
+++ b/shared-files/github-actions/project.yml.njk
@@ -16,3 +16,6 @@ jobs:
   publish-in-project:
     name: "Add issue/PR to project"
     uses: orange-cloudavenue/workflows/.github/workflows/project.yml@main
+    secrets:
+      {#- raw is used to avoid conflicts with the templating engine and github action #}
+      TOKEN: {% raw %}${{ secrets.CHANGELOG_PAT }}{% endraw %}
