feat: add vscode settings for golang

--- a/shared-files/vscode/changelog.code-snippets.njk
+++ b/shared-files/vscode/changelog.code-snippets.njk
@@ -1,4 +1,4 @@
-{% include '../../common/header.json.tmpl' %}
+{% include '../common/header.json.tmpl' %}
 
 {
     "Release Note Breaking change": {
