--- a/shared-files/github-actions/common/golang/unit-test-tf-provider.tmpl
+++ b/shared-files/github-actions/common/golang/unit-test-tf-provider.tmpl
@@ -1,5 +1,8 @@
     name: "Unit Tests"
     uses: orange-cloudavenue/workflows/.github/workflows/go_unit-test-tf-provider.yml@main
+    with:
+      ref: {% raw %}${{ github.ref }}{% endraw %}
+      repository: {% raw %}${{ github.repository }}{% endraw %}
     secrets:
       CLOUDAVENUE_ORG: {% raw %}${{ secrets.CLOUDAVENUE_ORG }}{% endraw %}
       CLOUDAVENUE_USER: {% raw %}${{ secrets.CLOUDAVENUE_USER }}{% endraw %}
