--- a/shared-files/github-actions/common/golang/unit-test.tmpl
+++ b/shared-files/github-actions/common/golang/unit-test.tmpl
@@ -1,2 +1,5 @@
     name: "Unit Tests"
     uses: orange-cloudavenue/workflows/.github/workflows/go_unit-test.yml@main
+    with:
+      ref: {% raw %}${{ github.ref }}{% endraw %}
+      repository: {% raw %}${{ github.repository }}{% endraw %}
