fix: bug checkout bad ref

--- a/shared-files/github-actions/pr.yml.njk
+++ b/shared-files/github-actions/pr.yml.njk
@@ -61,16 +61,32 @@ jobs:
 {% if golang %}
   golang-ci-lint:
     if: event.type != 'edited' && github.event.pull_request.draft == false
-    {% include './common/golang/lint.tmpl' %}
+    name: "Lint"
+    uses: orange-cloudavenue/workflows/.github/workflows/go_golangci-lint.yml@main
+    with:
+      ref: {% raw %}${{ github.ref }}{% endraw %}
+      repository: {% raw %}${{ github.repository }}{% endraw %}
 
   tests:
     if: event.type != 'edited' && github.event.pull_request.draft == false
     {% if terraform_provider %}
-    {% include './common/golang/unit-test-tf-provider.tmpl' %}
-    {% else %}
-    {% include './common/golang/unit-test.tmpl' %}
-    {% if repo.name == 'cloudavenue-sdk-go-v2' %}
+    name: "Unit Tests"
+    uses: orange-cloudavenue/workflows/.github/workflows/go_unit-test-tf-provider.yml@main
     with:
+      ref: {% raw %}${{ github.ref }}{% endraw %}
+      repository: {% raw %}${{ github.repository }}{% endraw %}
+    secrets:
+      CLOUDAVENUE_ORG: {% raw %}${{ secrets.CLOUDAVENUE_ORG }}{% endraw %}
+      CLOUDAVENUE_USER: {% raw %}${{ secrets.CLOUDAVENUE_USER }}{% endraw %}
+      CLOUDAVENUE_PASSWORD: {% raw %}${{ secrets.CLOUDAVENUE_PASSWORD }}{% endraw %}
+      CLOUDAVENUE_VDC: {% raw %}${{ secrets.CLOUDAVENUE_VDC }}{% endraw %}
+    {% else %}
+    name: "Unit Tests"
+    uses: orange-cloudavenue/workflows/.github/workflows/go_unit-test.yml@main
+    with:
+      ref: {% raw %}${{ github.ref }}{% endraw %}
+      repository: {% raw %}${{ github.repository }}{% endraw %}
+    {% if repo.name == 'cloudavenue-sdk-go-v2' %}
       send-coverage: true
     {% endif %}
     {% endif %}
