--- a/shared-files/github-actions/pr.yml.njk
+++ b/shared-files/github-actions/pr.yml.njk
@@ -32,7 +32,7 @@ jobs:
       {#TOKEN: {% raw %}${{ secrets.GITHUB_TOKEN }}{% endraw %} #}
 
   pr-size:
-    if: event.type != 'edited'
+    if: github.event.action != 'edited'
     name: "PR Size"
     uses: orange-cloudavenue/workflows/.github/workflows/pr_label_size.yml@main
     with:
@@ -43,7 +43,7 @@ jobs:
       TOKEN: {% raw %}${{ secrets.CHANGELOG_PAT }}{% endraw %}
 
   pr-conventional-commits:
-    if: event.type == 'opened' || event.type == 'edited'
+    if: github.event.action == 'opened' || github.event.action == 'edited'
     name: "Conventional Commits"
     uses: orange-cloudavenue/workflows/.github/workflows/pr_conventional_commits.yml@main
     secrets:
@@ -51,7 +51,7 @@ jobs:
       TOKEN: {% raw %}${{ secrets.CHANGELOG_PAT }}{% endraw %}
 
   pr-license:
-    if: event.type != 'edited' && github.event.pull_request.draft == false
+    if: github.event.action != 'edited' && github.event.pull_request.draft == false
     name: "License Check"
     uses: orange-cloudavenue/workflows/.github/workflows/pr_license.yml@main
     with:
@@ -60,16 +60,16 @@ jobs:
 
 {% if golang %}
   golang-ci-lint:
-    if: event.type != 'edited' && github.event.pull_request.draft == false
+    if: github.event.action != 'edited' && github.event.pull_request.draft == false
     {% include './common/golang/lint.tmpl' %}
 
   tests:
-    if: event.type != 'edited' && github.event.pull_request.draft == false
+    if: github.event.action != 'edited' && github.event.pull_request.draft == false
     {% if terraform_provider %}
     {% include './common/golang/unit-test-tf-provider.tmpl' %}
     {% else %}
     {% include './common/golang/unit-test.tmpl' %}
-    
+
     {% if repo.name == 'cloudavenue-sdk-go-v2' %}
       send-coverage: true
     {% endif %}
