--- a/shared-files/golang/.golangci.yml.njk
+++ b/shared-files/golang/.golangci.yml.njk
@@ -150,6 +150,7 @@ linters:
               - BMS
               - SAML
               - VDCG
+            - - skip-package-name-checks: true
           severity: warning
           disabled: false
   exclusions:
